[package]
name = "bulletin-board-mathematica"
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
description = "Mathematica client for BulletinBoard"
repository = "https://github.com/YShoji-HEP/BulletinBoard"
readme = "README.md"
keywords = ["object_storage", "database", "debugging", "mathematica", "client"]
categories = ["database", "development-tools::debugging"]

[dependencies]
wolfram-library-link = "0.2.10"
bulletin-board-client = "0.3.3"

[lib]
crate-type = ["cdylib"]