[package]
name = "bulletin-board-server"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Object storage for ArrayObject for debugging and data taking purposes."
repository = "https://github.com/YShoji-HEP/BulletinBoard"
readme = "README.md"
keywords = ["object_storage", "database", "debugging", "server"]
categories = ["database-implementations", "development-tools::debugging"]

[dependencies]
bulletin-board-common = "0.2.0"
ciborium = "=0.2.2"
serde_bytes = "0.11.15"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
parse-size = "1.0.0"
fs_extra = "1.3.0"
clap = { version = "4.5.20", features = ["derive"] }

[features]
default = []
unix = []