[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "7.3.0"
prost = "0.13.5"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
bulletin-board-server = "0.3.2"
bulletin-board-client = "0.3.4"
# enigo = "0.2.1"
# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.7.2", features = ["rt", "macros"] }
# wasm-bindgen = "0.2.95"